--- a/BluetoothTest/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothTest/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="starace.com.bluetoothtest.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/connect_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Connect"
+        android:layout_centerInParent="true"
+        android:background="@color/colorPrimaryDark"/>
+
 </RelativeLayout>
