--- a/BluetoothTest/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothTest/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,14 @@
         android:layout_centerInParent="true"
         android:background="@color/colorPrimaryDark"/>
 
+    <Button
+        android:id="@+id/connect_button_accept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Accept"
+        android:layout_centerInParent="true"
+        android:background="@color/colorPrimaryDark"
+        android:layout_below="@+id/connect_button"
+        android:layout_marginTop="30dp"/>
+
 </RelativeLayout>
